--- a/src/index.css
+++ b/src/index.css
@@ -47,18 +47,20 @@ h1, h2, h3, h4, h5{
 h1{
     font-size: 2.5rem;
 }
+h2{
+    text-decoration: underline ;
+    margin-top: 3rem;
+    color: var(--color-font);
+}
 section{
     margin-top: 8rem;
 }
 
-section > h2, section > h5 {
+ h2, h5 {
     text-align: center;
     color: var(--color-font-secondary);
 }
-section > h2 {
-    color: var(--color-font-white);
-    margin-bottom: 3rem;
-}
+
 .text-light{
     color: var(--color-font-third);
 }
