--- a/src/Component/About/about.css
+++ b/src/Component/About/about.css
@@ -24,11 +24,13 @@ h2{
     border: none;
 
 }
-.aboutbutton{
+.downloadbutton{
     position: relative;
     display: block;
 }
-
+button:hover{
+    background-color: var(--color-pink);
+}
 .cards{
     margin: 20px;
     display: inline-block;
@@ -87,21 +89,32 @@ hr{
     background-color: var(--color-font);
     padding: 1rem 0 2rem 0;
 }
+label{
+    font-size: 12px;
+}
 .skill{
-    margin: 3px;
+    margin: 4px;
     border-color: transparent;
     border-style: solid;
     border-radius: 15px;
-    height: 2rem;
+    height: 1.5rem;
+
 }
 .skills{
     position: relative;
     display: block;
 }
-.sk h3, .sk h4{
+.skill:hover{
+    box-shadow: 0 20px 50px rgba(0, 5, 24, 0.8);
+    height: 2rem;
+    width: 110%;
+}
+h3{
     margin-top: 2.25rem;
-    margin-bottom: 1.25rem;
+    margin-bottom: 2.25rem;
     color: white;
     font-weight: 300;
     text-overflow: clip;
 }
+
+/*UI friendly progressbar*/
