--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
 
     --bg-main: #252934;
     --bg-secondary:#1b242f;
+    --bg-clear: #e5e9ec;
 
     --color-pink: rgb(240, 44, 106);
     --color-babyblue: #2bb1b6;
@@ -35,7 +36,7 @@ body{
     font-family: 'Poppins', sans-serif;
     color:whitesmoke;
     line-height: 1.7 ;
-    background-color: whitesmoke;
+    background-color: var(--bg-clear)
 }
 
 .container{
